# EclairLooks

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  README.rst  asan.supp  tmp_cubic.glsl
.travis/: fix-deps.sh  install-deps.sh
doc/: macdeployqt_issue.txt
ext/: 0001-Fix-595-and-others-issue-with-pkgconfig-generation-u.patch  CMakeLists.txt
src/: CMakeLists.txt  context.cpp  context.h  image.cpp  image.h  imagepipeline.cpp  imagepipeline.h  imagetransformation.h  imagewidget.cpp  imagewidget.h  logwidget.cpp  main.cpp  mainwindow.cpp  mainwindow.h  sample_cc14.cpp  settings.cpp  settings.h  transform_ocio.cpp  transform_ocio.h  transformationlistwidget.cpp  transformationlistwidget.h
src/core/: image.cpp  imagepipeline.cpp  imagepipeline.h  transform.h  transform.hpp  types.h
src/gui/: mainwindow.cpp  mainwindow.h  uiloader.cpp
src/gui/common/: imageviewer.cpp  imageviewer.h  setting.cpp  setting.h  slider.cpp  slider.h  textureview.cpp  textureview.h
src/gui/scope/: cube.cpp  glscope.cpp  glscope.h  vectorscope.cpp  vectorscope.h  waveform.cpp  waveform.h
src/gui/view/dev/: operatorlist.cpp  pipeline.cpp  pipeline.h  widget.cpp  widget.h
src/gui/view/look/: detail.cpp  listview.cpp  metadata.cpp  metadata.h  selection.cpp  selection.h  tabview.cpp  widget.cpp  widget.h
src/operator/: ctl_operator.cpp  ctl_operator.h  ctl_transform.cpp  ctl_transform.h  imageoperator.cpp  imageoperator.h  imageoperator.hpp  imageoperatorlist.h  imageoperatorparameter.cpp  imageoperatorparameter.h  imageoperatorparameterlist.cpp  imageoperatorparameterlist.h  imageoperatorparameterlist.hpp  ociocolorspace_operator.cpp  ociocolorspace_operator.h  ociofiletransform_operator.cpp  ociofiletransform_operator.h  ociomatrix_operator.cpp  ociomatrix_operator.h
src/operator/ctl/: operator.cpp  operator.h  transform.cpp  transform.h
src/operator/curve/: curve.cpp  curve.h  graphic.cpp  graphic.h  operator.cpp  operator.h  parameter.cpp  parameter.h  widget.cpp  widget.h
src/operator/ocio/: colorspace.cpp  colorspace.h  filetransform.cpp  filetransform.h  matrix.cpp  matrix.h
src/parameter/: parameter.cpp  parameter.h  parameter_button.h  parameter_checkbox.h  parameter_curve.h  parameter_filepath.h  parameter_matrix.h  parameter_select.h  parameter_slider.h  parameter_text.h  parameterlist.h  parameterseriallist.cpp  parameterseriallist.h  parameterwidget.h
src/parameter/checkbox/: widget.cpp  widget.h
src/parameter/filepath/: widget.cpp  widget.h
src/parameter/matrix/: parameter.cpp  parameter.h  widget.cpp  widget.h
src/parameter/select/: widget.cpp  widget.h
src/parameter/shortcut/: parameter.cpp  parameter.h  widget.cpp  widget.h
src/parameter/slider/: parameter.cpp  parameter.h  widget.cpp  widget.h
src/parameter/text/: parameter.cpp  widget.cpp  widget.h
src/resources/: res.qrc
src/resources/css/: application.css
src/resources/html/: help.html
src/resources/ui/: devwidget.ui  lookwidget.ui
src/scope/: cubewidget.cpp  cubewidget.h  curvewidget.cpp  curvewidget.h  neutralwidget.cpp  neutralwidget.h  waveformwidget.cpp  waveformwidget.h
src/utils/: event_source.h  event_source.hpp  generic.h  gl.h  parameter.h  parameterlist.cpp  parameterlist.h  parameterlist.hpp  types.h
src/widget/: browserwidget.cpp  browserwidget.h  devwidget.cpp  devwidget.h  imagewidget.cpp  imagewidget.h  logwidget.cpp  logwidget.h  lookbrowserwidget.cpp  lookbrowserwidget.h  lookdetailwidget.cpp  lookdetailwidget.h  lookselectionwidget.cpp  lookselectionwidget.h  lookviewtabwidget.cpp  lookviewtabwidget.h  lookviewwidget.cpp  lookviewwidget.h  lookwidget.cpp  lookwidget.h  operatorlistwidget.cpp  operatorlistwidget.h  operatorwidget.cpp  operatorwidget.h  parameterwidget.cpp  parameterwidget.h  pipelinewidget.cpp  pipelinewidget.h  settingwidget.cpp  settingwidget.h  textureview.cpp  textureview.h  transformationlistwidget.cpp  transformationlistwidget.h  transformationwidget.cpp  transformationwidget.h  uiloader.cpp
src/widget/common/: slider.cpp  slider.h
src/widget/parameter/: parameter_checkbox.h  parameter_filepath.h  parameter_select.h  parameter_slider.h  parameter_text.h  parameter_widget.cpp  parameter_widget.h
